--- a/ezra-project w3/index.html
+++ b/ezra-project w3/index.html
@@ -16,34 +16,61 @@
         <div class="image-with-countries">
             <div class="countries-container">
                 <div class="country-item country-item-1">
-                    <img src="https://flagcdn.com/gh.svg" alt="Ghana Flag" class="country-flag">
+                        <a href="https://joshuaproject.net/countries/GH" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/gh.svg" alt="Ghana Flag" class="country-flag">
                     <div class="country-info">Ghana, Accra</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-2">
-                    <img src="https://flagcdn.com/ve.svg" alt="Venezuela Flag" class="country-flag">
-                    <div class="country-info">Venezuela, Caracas</div>
+                    <a href="https://joshuaproject.net/countries/VE" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/ve.svg" alt="Venezuela Flag" class="country-flag">
+                        <div class="country-info">Venezuela, Caracas</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-3">
-                    <img src="https://flagcdn.com/pe.svg" alt="Peru Flag" class="country-flag">
-                    <div class="country-info">Peru, Lima</div>
+                    <a href="https://joshuaproject.net/countries/PE" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/pe.svg" alt="Peru Flag" class="country-flag">
+                        <div class="country-info">Peru, Lima</div>
+                    </a>
                 </div>
+                <img src="./central_image.png" alt="Central Image" class="center-image">
                 <div class="country-item country-item-4">
-                    <img src="https://flagcdn.com/co.svg" alt="Colombia Flag" class="country-flag">
-                    <div class="country-info">Colombia, Cartagena</div>
+                    <a href="https://joshuaproject.net/countries/CO" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/co.svg" alt="Colombia Flag" class="country-flag">
+                        <div class="country-info">Colombia, Cartajena</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-5">
-                    <img src="https://flagcdn.com/aw.svg" alt="Aruba Flag" class="country-flag">
-                    <div class="country-info">Aruba, Oranjestad</div>
+                    <a href="https://joshuaproject.net/countries/AA" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/aw.svg" alt="Aruba Flag" class="country-flag">
+                        <div class="country-info">Aruba, Oranjestad</div>
+                    </a>
                 </div>
-                <div class="country-item country-item-6">
+                <!-- <div class="country-item country-item-6">
                     <img src="https://flagcdn.com/us.svg" alt="United States Flag" class="country-flag">
                     <div class="country-info">Miami, Florida</div>
+                </div> -->
+                <div class="country-item country-item-6">
+                    <a href="https://joshuaproject.net/people_groups/10291/US" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/us.svg" alt="United States Flag" class="country-flag">
+                    <div class="country-info">Miami, Florida</div>
+                    </a>
                 </div>
+                <!-- <div class="country-item country-item-7">
+                    <a href="India.html" style="text-decoration: none; color: inherit;">
+                        <img src="https://flagcdn.com/in.svg" alt="India Flag" class="country-flag">
+                        <div class="country-info">India, Kerala</div>
+                    </a>
+                </div> -->
                 <div class="country-item country-item-7">
-                    <img src="https://flagcdn.com/in.svg" alt="India Flag" class="country-flag">
-                    <div class="country-info">India, Kerala</div>
+                    <a href="https://joshuaproject.net/countries/in" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/in.svg" alt="India Flag" class="country-flag">
+                        <div class="country-info">India, Kerala</div>
+                    </a>
                 </div>
+
             </div>
+
             <img src="central image.png" alt="Central Image" class="center-image">
         </div>
     </div>
