--- a/ezra-project w3/index.html
+++ b/ezra-project w3/index.html
@@ -3,49 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout</title>
+    <title>Ezra</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="layout-container">
-        <div style="position: fixed; top: 10px; left: 10px; z-index: 1000;">
-            <img src="./ezraLogo.jpg" alt="Logo" class="logo-fixed">
-        </div>
+        <img src="/ezraLogo.jpg" alt="Logo" class="logo-fixed">
+        <button class="language-button" onclick="window.location.href='index_es.html'">Español</button>
         <h1 class="layout-title">Lets make the Great Commission!</h1>
         <hr class="layout-hr">
         <div class="image-with-countries">
+            <img src="https://flagcdn.com/il.svg" alt="דגל ישראל" class="israel-flag-overlay">
             <div class="countries-container">
                 <div class="country-item country-item-1">
+                    <a href="https://joshuaproject.net/countries/GH" style="text-decoration: none; color: inherit;" target="_blank">
                     <img src="https://flagcdn.com/gh.svg" alt="Ghana Flag" class="country-flag">
-                    <div class="country-info">Ghana, Accra</div>
+                <div class="country-info">Ghana, Accra</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-2">
-                    <img src="https://flagcdn.com/ve.svg" alt="Venezuela Flag" class="country-flag">
-                    <div class="country-info">Venezuela, Caracas</div>
+                    <a href="https://joshuaproject.net/countries/VE" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/ve.svg" alt="Venezuela Flag" class="country-flag">
+                        <div class="country-info">Venezuela, Caracas</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-3">
-                    <img src="https://flagcdn.com/pe.svg" alt="Peru Flag" class="country-flag">
-                    <div class="country-info">Peru, Lima</div>
+                    <a href="https://joshuaproject.net/countries/PE" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/pe.svg" alt="Peru Flag" class="country-flag">
+                        <div class="country-info">Peru, Lima</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-4">
-                    <img src="https://flagcdn.com/co.svg" alt="Colombia Flag" class="country-flag">
-                    <div class="country-info">Colombia, Cartagena</div>
+                    <a href="https://joshuaproject.net/countries/CO" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/co.svg" alt="Colombia Flag" class="country-flag">
+                        <div class="country-info">Colombia, Cartajena</div>
+                    </a>
                 </div>
+                
+                <img src="./central image.png" alt="Central Image" class="center-image">
+                <iframe src="https://free.timeanddate.com/clock/i9u8cz49/n676/bo2/pa5/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="97" height="44"></iframe>
                 <div class="country-item country-item-5">
-                    <img src="https://flagcdn.com/aw.svg" alt="Aruba Flag" class="country-flag">
-                    <div class="country-info">Aruba, Oranjestad</div>
+                    <a href="https://joshuaproject.net/countries/AA" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/aw.svg" alt="Aruba Flag" class="country-flag">
+                        <div class="country-info">Aruba, Oranjestad</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-6">
-                    <img src="https://flagcdn.com/us.svg" alt="United States Flag" class="country-flag">
+                    <a href="https://joshuaproject.net/people_groups/10291/US" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/us.svg" alt="United States Flag" class="country-flag">
                     <div class="country-info">Miami, Florida</div>
+                    </a>
                 </div>
                 <div class="country-item country-item-7">
-                    <img src="https://flagcdn.com/in.svg" alt="India Flag" class="country-flag">
-                    <div class="country-info">India, Kerala</div>
+                    <a href="https://joshuaproject.net/countries/in" style="text-decoration: none; color: inherit;" target="_blank">
+                        <img src="https://flagcdn.com/in.svg" alt="India Flag" class="country-flag">
+                        <div class="country-info">India, Kerala</div>
+                    </a>
                 </div>
             </div>
-            <img src="central image.png" alt="Central Image" class="center-image">
         </div>
+    </div>
+    <div class="prayer-image-container">
+        <p>Unified Prayer Time</p>
+        <img src="tiempo-de-oracion-unido.jpg" alt="Unified Prayer Time" class="prayer-image">
     </div>
 </body>
 </html>
