--- a/ezra-project w3/index_es.html
+++ b/ezra-project w3/index_es.html
@@ -12,6 +12,9 @@
         <button class="language-button" onclick="window.location.href='index.html'">English</button>
         <h1 class="layout-title">¡Hagamos la Gran Comisión!</h1>
         <hr class="layout-hr">
+        <button class="left-sidebar1" onclick="window.location.href='./devocionalParaNinos-main/index_devocionalDeNiños.html'" target="_blank">Devocional <br/> Para Ninos</button>
+        <br/>
+        <button class="left-sidebar2" onclick="window.location.href='./claseDeBiblia-ingles/index_englishBibleStudy.html'" >Clase de <br/> Biblia en Ingles</button>
         <div class="image-with-countries">
             <img src="./central image.png" alt="Imagen Central" class="center-image">
             <img src="https://flagcdn.com/il.svg" alt="דגל ישראל" class="israel-flag-overlay">
