--- a/ezra-project w3/index_es.html
+++ b/ezra-project w3/index_es.html
@@ -9,20 +9,24 @@
 <body>
     <div class="layout-container">
         <img src="/ezraLogo.jpg" alt="Logo" class="logo-fixed">
-        <button class="language-button" onclick="window.location.href='index_es.html'">Español</button>
-        <h1 class="layout-title">Let's do the Great Commission!</h1>
+        <button class="language-button" onclick="window.location.href='index.html'">English</button>
+        <h1 class="layout-title">¡Hagamos la Gran Comisión!</h1>
         <hr class="layout-hr">
+        <button class="left-sidebar1" onclick="window.location.href='./devocionalParaNinos-main/index_devocionalDeNiños.html'" target="_blank">Devocional <br/> Para Ninos</button>
+        <br/>
+        <button class="left-sidebar2" onclick="window.location.href='./claseDeBiblia-ingles/index_englishBibleStudy.html'" >Clase de <br/> Biblia en Ingles</button>
         <div class="image-with-countries">
             <img src="./central image.png" alt="Imagen Central" class="center-image">
             <img src="https://flagcdn.com/il.svg" alt="דגל ישראל" class="israel-flag-overlay">
             <div class="countries-container">
-                <h2>Israel Time</h2>
+                <h2>Hora Israel</h2>
                 <iframe src="https://free.timeanddate.com/clock/i9u8cz49/n676/bo2/pa5/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="97" height="44"></iframe>
                 <div class="country-item country-item-1">
                     <a href="https://joshuaproject-net.translate.goog/countries/GH?_x_tr_sl=en&_x_tr_tl=es&_x_tr_hl=iw&_x_tr_pto=wapp" style="text-decoration: none; color: inherit;" target="_blank">
                         <img src="https://flagcdn.com/gh.svg" alt="Bandera de Ghana" class="country-flag">
                         <div class="country-info">Ghana, Accra</div>
                         <iframe src="https://free.timeanddate.com/clock/i9ub0yfu/n1892/fs12/tct/pct/ts1" frameborder="0" width="81" height="16" allowtransparency="true"></iframe>
+
                     </a>
                 </div>
                 <div class="country-item country-item-2">
@@ -75,7 +79,7 @@
         </div>
     </div>
     <div class="prayer-image-container">
-        <p>Prayer Time United</p>
+        <p>Tiempo de Oracion Unidos</p>
         <br/>
         <img src="tiempo-de-oracion-unido2.jpg" alt="Unified Prayer Time" class="prayer-image">
     </div>
