--- a/ezra-project w3/index.html
+++ b/ezra-project w3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="eמ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,10 @@
     <div class="layout-container">
         <img src="/ezraLogo.jpg" alt="Logo" class="logo-fixed">
         <button class="language-button" onclick="window.location.href='index_es.html'">Español</button>
-        <h1 class="layout-title">Let's do the Great Commission!</h1>
+        <h1 class="layout-title" style="font-size: 2em;">Let's do the Great Commission!</h1>
         <hr class="layout-hr">
+        <button class="left-sidebar1" onclick="window.location.href='index_websites.html';" target="_blank">Bible Study</button>
+        <br/>
         <div class="image-with-countries">
             <img src="./central image.png" alt="Imagen Central" class="center-image">
             <img src="https://flagcdn.com/il.svg" alt="דגל ישראל" class="israel-flag-overlay">
