--- a/ezra-project w3/index_es.html
+++ b/ezra-project w3/index_es.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ezra</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_es.css">
 </head>
 <body>
     <div class="layout-container">
         <img src="/ezraLogo.jpg" alt="Logo" class="logo-fixed">
         <button class="language-button" onclick="window.location.href='index.html'">English</button>
-        <h1 class="layout-title">¡Hagamos la Gran Comisión!</h1>
+        <h1 class="layout-title" style="font-size: 2em;">¡Hagamos la Gran Comisión!</h1>
         <hr class="layout-hr">
-        <button class="left-sidebar1" onclick="window.location.href='./devocionalParaNinos-main/index_devocionalDeNiños.html'" target="_blank">Devocional <br/> Para Ninos</button>
-        <br/>
-        <button class="left-sidebar2" onclick="window.location.href='./claseDeBiblia-ingles/index_englishBibleStudy.html'" >Clase de <br/> Biblia en Ingles</button>
+        <div class="buttons-container">
+            <button class="left-sidebar1" onclick="window.location.href='./devocionalParaNinos-main/index_devocionalDeNiños.html'" target="_blank">Devocional <br/> Para Ninos</button>
+            <button class="left-sidebar2" onclick="window.location.href='/claseDeBiblia-ingles/chapter1/index_study1.html'" >Clase de <br/> Biblia en Ingles</button>
+            <button class="left-sidebar3" onclick="window.location.href='index_websites.html';" target="_blank">Recursos <br/> Adicionales</button>
+          </div>
         <div class="image-with-countries">
             <img src="./central image.png" alt="Imagen Central" class="center-image">
             <img src="https://flagcdn.com/il.svg" alt="דגל ישראל" class="israel-flag-overlay">
             <div class="countries-container">
-                <h2>Hora Israel</h2>
+                <h1>Hora Israel</h1>
                 <iframe src="https://free.timeanddate.com/clock/i9u8cz49/n676/bo2/pa5/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="97" height="44"></iframe>
                 <div class="country-item country-item-1">
                     <a href="https://joshuaproject-net.translate.goog/countries/GH?_x_tr_sl=en&_x_tr_tl=es&_x_tr_hl=iw&_x_tr_pto=wapp" style="text-decoration: none; color: inherit;" target="_blank">
