--- a/ezra-project w3/index_websites.html
+++ b/ezra-project w3/index_websites.html
@@ -4,6 +4,7 @@
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Ezra</title>
+        <link rel="stylesheet" href="styles_websites.css">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
         <script src='main.js'></script>
@@ -14,35 +15,43 @@
         <div class="study-info">BIBLICAL TRAINING</div>
     <br/>
     <div class="study-item-1">
-        <a href="https://www.biblicaltraining.org/search?content_index%5BrefinementList%5D%5Blanguage%5D%5B0%5D=Spanish" style="text-decoration: none; color: inherit;" target="_blank">
-            <div class="study-info">Estudios Biblicos de PhP Bill Mounce en Español</div>
+        <a href="https://www.biblicaltraining.org/search?content_index%5BrefinementList%5D%5Blanguage%5D%5B0%5D=Spanish" style="text-decoration: none; color: inherit; cursor: pointer;" target="_blank">
+            <div class="study-info">👉 Estudios Biblicos de PhP Bill Mounce en Español</div>
         </a>
     </div>
     <br/><br/>
     <div class="study-item-2">
         <a href="https://www.biblicaltraining.org/search?content_index%5BrefinementList%5D%5Blanguage%5D%5B0%5D=Hindi" style="text-decoration: none; color: inherit;" target="_blank">
-            <div class="study-info">PhP Bill Mounce Bible studies in Hindi</div>
+            <div class="study-info">👉 PhP Bill Mounce Bible studies in Hindi</div>
         </a>
     </div>
     <br/><br/>
     <div class="study-item-3">
         <a href="https://www.biblicaltraining.org/subjects/missions" style="text-decoration: none; color: inherit;" target="_blank">
-            <div class="study-info">Missions</div>
+            <div class="study-info">👉 Missions</div>
             <h5>These classes will challenge you to look outside yourself and your culture to the world around you.</h5>
             <h5>Includs classes on other religions.</h5>
         </a>
     </div>
     <div class="study-item-4">
         <a href="https://www.biblicaltraining.org/about#about-us--what-we-believe" style="text-decoration: none; color: inherit;" target="_blank">
-            <div class="study-info">The essentials of faith</div>
+            <div class="study-info">👉 The essentials of faith</div>
         </a>
     </div>
     <br/><br/>
     
-    <img src="logo-STLA.jpg" alt="Logo de STLA" height="50" class="study-info"> 
     <div class="study-item-5">
         <a href="https://stla.org.pe/" style="text-decoration: none; color: inherit;" target="_blank">
-            <div class="study-info">SEMINARIO TEOLÓGICO LATINOAMERICANO (STLA)</div>
+            <img src="logo-STLA.jpg" alt="Logo de STLA" height="50" class="study-info"> 
+            <div class="study-info">👉 SEMINARIO TEOLÓGICO LATINOAMERICANO (STLA)</div>
+        </a>
+        <br/>
+    </div>
+    <br/><br/>
+    <div class="study-item-4">
+        <a href="https://www.faithchannel.com" style="text-decoration: none; color: inherit;" target="_blank">
+            <img src="https://www.faithchannel.com/images/logo_horizontal_white.svg" alt="Logo de STLA" height="50" class="study-info"> 
+            <div class="study-info">👉 Christian Television Channel</div>
         </a>
     </div>
 
